Added some more tags

--- a/index.html
+++ b/index.html
@@ -30,12 +30,25 @@
         <button class="trial-btn" onclick=clickcalled()>Start Free Trial</button>
     </div>
     <div class="adv">
-        <p><span class="bat">Be a top</span> <br /> <spab class="se">Software Engineer</spab></p>
+        <p><span class="bat">Be a top</span> <br /> <span class="se">Software Engineer</span></p>
         <div class="rect"></div>
     </div>
     <div class="form-box">
         <p class="top">Stuck in your career? We are here!</p>
         <p class="main-head">Get a Free 1-1 Career Counsel</p>
+
+        <p class="name">Name</p>
+        <input class="nameinpt" type="text">
+
+        <p class="email name">Email</p>
+        <input class="emalinpt" type="email">
+
+        <p class="phnNum name">Phone Number</p>
+        <input class="nmbrinpt" type="number">
+
+        <button class="trial-btn bacn-btn" onclick=clickcalled()>Book a Call Now</button>
+
+
     </div>
     <div class="comp-img">
         <img src="./Images/Google.png" class="ggl img">
@@ -44,7 +57,50 @@
         <img src="./Images/Flipkart.jpg" alt="Flipkart" class="fpkrt img">
         <img src="./Images/Paloalto.png" alt="Paloalto" class="plalt img">
         <img src="./Images/Razorpay.png" alt="Razorpay"class="rzrpe img">
+        <p class="amm img"> and many more...</p>
+        <button class="trial-btn lrng-btn" onclick=clickcalled()>Start Learning For Free</button>
+        <p class="ofr">Watch 100+ free lectures. No commitment, cancel anytime</p>
     </div>
-    
+    <div class="ad-lld">
+        <img src="./Images/megaphone.png" alt="adv anouncmnt pic" class="mgphn">
+        <p class="txt">
+            Check out our New Course - “Low Level Design for Professionals" ✨
+        </p>
+    </div>
+    <div class="lpd">
+        <p class="lrnpth">Learning Path</p>
+        <p class="desc">Designed for both students and working professionals to crack their dream Software Engineering Roles at Top Product Based Companies. </p>
+    </div>
+    <div class="courses">
+        <div class="renaissance">
+            <img src="./Images/renaissance.png" class="img1">
+            <p class="data">
+                Renaissance for Coding Interview
+            </p>
+            <p class="metadata">Master Data Structures & Algorithms and System Design. Crack Top-notch Tech roles.</p>
+            <p class="knwMr">Know more <img id="rgt-Arrow" src="./Images/arrow.png" alt="Right arrow"></p>
+
+        </div>
+
+        <div class="Low-lvl-dsgn renaissance">
+            <img src="./Images/low-level-design.png" class="img1">
+            <p class="data">
+                Low Level Design for Professionals
+            </p>
+            <p class="metadata">Design and write highly extensible, maintainable and readable code. Mandatory skill for Senior Engineers.</p>
+            <p class="knwMr">Know more <img id="rgt-Arrow" src="./Images/arrow.png" alt="Right arrow"></p>
+
+        </div>
+
+        <div class="c-progrmng renaissance">
+            <img src="./Images/programming-in-cpp.png" class="img1">
+            <p class="data">
+                Begin with Programming in C++            </p>
+            <p class="metadata">A practical and hands-on course for those who are eager to master C++. Beginner-friendly.</p>
+            <p class="knwMr">Know more <img id="rgt-Arrow" src="./Images/arrow.png" alt="Right arrow"></p>
+
+        </div>
+
+    </div>
 </body>
 </html>
