--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
               it is pretty much all we need to build problem solving
              skills.
         </div>
-        <div class="name">Zeal Vagadia</div>
+        <div class="name2">Zeal Vagadia</div>
         <div class="designation">Software Engineer at Amazon</div>
     </div>
 </body>
