--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <p class="desc">Designed for both students and working professionals to crack their dream Software Engineering
             Roles at Top Product Based Companies. </p>
     </div>
+    <div class="f1">Renaissance</div>
     <div class="courses">
         <div class="renaissance">
             <img src="./Images/renaissance.png" class="img1">
@@ -84,7 +85,7 @@
             <p class="knwMr">Know more <img id="rgt-Arrow" src="./Images/arrow.png" alt="Right arrow"></p>
 
         </div>
-
+        <div class="f2 f1">Low Level Design</div>
         <div class="Low-lvl-dsgn renaissance">
             <img src="./Images/low-level-design.png" class="img1">
             <p class="data">
@@ -95,7 +96,7 @@
             <p class="knwMr">Know more <img id="rgt-Arrow" src="./Images/arrow.png" alt="Right arrow"></p>
 
         </div>
-
+        <div class="f3 f1">Programming In C++</div>
         <div class="c-progrmng renaissance">
             <img src="./Images/programming-in-cpp.png" class="img1">
             <p class="data">
@@ -273,12 +274,12 @@
             <img class="profilepic" src="./Images/person2.png">
             <p id="p">Bharat Khanna</p>
             <p class="design">Co-Founder, Programming Pathsala</p>
-            <p id="cntnt">Bharat worked at Tower Research Capital after 
-                graduating from IIT in 2018. Foodie at heart, he loves to 
+            <p id="cntnt">Bharat worked at Tower Research Capital after
+                graduating from IIT in 2018. Foodie at heart, he loves to
                 build- courses and tech alike. <br><br>
-                For him every problem can be solved if it is given adequate 
-                effort, attention and time. He has been a candidate master at 
-                Codeforces and one of the best teachers of coding to thousands 
+                For him every problem can be solved if it is given adequate
+                effort, attention and time. He has been a candidate master at
+                Codeforces and one of the best teachers of coding to thousands
                 of students.
             </p>
             <div class="social">
@@ -291,17 +292,164 @@
             <p id="p">Anoop Garg</p>
             <p class="design">Co-Founder, Programming Pathsala</p>
             <p id="cntnt">Anoop is an IIT BHU graduate, with a Masters in
-                 Tulleling from University of Warwick, UK. <br><br>
+                Tulleling from University of Warwick, UK. <br><br>
                 He is a impact driven businessman in spirit and, a spiritual
-                 at heart. He loves solving complex problems, speaking to 
-                 students, and is keen to help folks out in any way possible.
-                </p>
+                at heart. He loves solving complex problems, speaking to
+                students, and is keen to help folks out in any way possible.
+            </p>
             <div class="social">
                 <img class="lnkdn p2" src="./Images/linkedin.png" alt="linkedin logo">
                 <img class="twtr p2" src="./Images/twitter.png" alt="twitter logo">
             </div>
         </div>
     </div>
+    <div class="contribute">
+        <div class="mentor">
+            <p id="cntribt">Contribute to the Mission</p>
+            <p id="mntr">Be a Mentor</p>
+            <p id="ctt1">Join us in this mission of enabling access to Tech 
+                Education by helping us reach out to more
+                folks and catalyse their journey- for it is not just about 
+                getting into a Tech Job but fundamentally
+                shifting the way people see themselves and their capabilities. 
+            </p>
+            <p id="ctt2">
+                Are you great at something or anything and want to teach with us? 
+            </p>
+            <button class="trial-btn twu-btn" onclick=clickcalled()>Teach With Us</button>
+        </div>
+        <div class="mentor-pic">
+            <div class="card">
+                <div class="person-pic">
+                    <img class="deepak" src="./Images/person3.png" alt="Deepak Gupta">
+                </div>
+                <div id="crd-cntnt">
+                    <img class="qts" src="./Images/sqr-qts.png" alt="Square quotes">
+                    <p class="about">
+                        I have been mentoring and teaching at Programming Pathshala
+                    from 2 years and it has been incredible to interact and 
+                    learn along with very keen and enthusiastic folks. I always
+                    wanted to teach and I'm so happy to be a part of this 
+                    initiative.
+                    </p>
+                    <p class="deep">
+                        Deepak Gupta
+                    </p>
+                    <p class="expr">
+                        Senior Developer at DevRev (Ex-Google, Amazon & Rubrik)
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="orblogs">
+        <p>Our Blogs</p>
+    </div>
+    <div class="inspiration">
+        <p>Read Inspiring Stories and Tech Blogs</p>
+    </div>
+    <div class="postd">
+        Inspiring and uplifting ideas which will help you feel positive about
+         your career.
+    </div>
+    <div class="lapfnglap">
+        <div class="laptop1">
+            <img class="lappy" src="./Images/laptop.png" alt="laptop">
+            <p class="title">
+                Guide for an ultimate Tech Career
+            </p>
+            <p class="plan">
+                It is a long established fact that a reader will be distracted 
+                by the readable content of a page when looking at its layout.....
+            </p>
+        </div>
+        <div class="faang">
+            <img class="fng" src="./Images/faang.png" alt="Faang">
+            <p class="title title2">
+                10 Most Common Mistakes To Avoid While Preparing for
+                 FAANG Company Coding Interviews!
+            </p>
+            <p class="plan fang">
+                It is a long established fact that a reader will be distracted 
+                by the readable content of a page when looking at its layout.....
+            </p>
+        </div>
+        <div class="laptop2">
+            <img class="desktop" src="./Images/office.png" alt="ofice">
+            <p class="title">
+                How to Ace your next Data Structures and Algorithms Interview?
+            </p>
+            <p class="plan office">
+                It is a long established fact that a reader will be distracted 
+                by the readable content of a page when looking at its layout.....
+            </p>
+        </div>
+    </div>
+    <button class="nomr-btn impact rmb-btn" onclick="clickcalled">Read More Blogs</button>
+    <div class="getinTouch">
+        <div class="mobilePic">
+            <img src="./Images/mobile-phone-chat-application-4301781-3585398 1.png" alt="mobile pic chat app" class="mobPic">
+        </div>
+        <div class="formSpace">
+            <p class="touch">Get In Touch</p>
+            <p class="name3">Name</p><br>
+            <input type="text" class="nameInput">
+
+            <p class="EmailId3 name3">Email ID</p><br>
+            <input type="email" class="emailInput">
+
+            <p class="queryMsg name3">Query/Message</p><br>
+            <input type="text" class="messageInput">
+
+            <button class="trial-btn cntct-btn" onclick=clickcalled()>Contact Us</button>
+
+        </div>
+    </div>
+    <p class="makeSuccs">Make Your Own Success Story!</p>
+    <p class="now">Start Your 7 Days Free Trial Now!</p>
+    <button class="trial-btn now-btn" onclick=clickcalled()>Start Free Trial</button>
+    <div class="last-container">
+        <div class="left">
+            <div class="wntknmr">Want To Know More About Our Courses?</div>
+            <div class="here">Let's here all about it. Contact Us</div>
+            <div class="firstlst">
+                <p class="list">Home</p>
+                <p class="list">Renaissance</p>
+                <p class="list">Low Level Design</p>
+                <p class="list">Programming in C++</p>
+                <p class="list">Python</p>
+            </div>
+            <div class="secondlst firstlst">
+                <p class="list">Front-End Development</p>
+                <p class="list">Stories</p>
+                <p class="list">Blogs</p>
+                <p class="list">Teach With Us</p>
+                <p class="list">Get Scholarship</p>
+            </div>
+            <div class="thirdlst firstlst">
+                <p class="list">Terms & Conditions</p>
+                <p class="list">Refund Policy</p>
+            </div>
+        </div>
+        <div class="right">
+            <img src="./Images/pplogo.png" alt="pplogo" class="plogo">
+            <p class="ptsla">Programming Pathsala</p>
+            <p class="munh">We help people build skills that are 
+                valued, enabling them to believe in themselves.</p>
+                <div class="follow">
+                    <img src="./Images/linkdin.jpeg" class="smedia1">
+                    <img src="./Images/youtube.png"  class="smedia2">
+                    <img src="./Images/facebook.png" class="smedia3">
+                    <img src="./Images/instagram.png"  class="smedia4">
+                    <img src="./Images/telegram.png" class="smedia5">
+                </div>
+                <div class="chatbutton">
+                    <img src="./Images/message.png" alt="Messanger logo">
+                    <p class="btn">Chat with an Expert</p>
+                </div>
+        </div>
+    </div>
+    <div class="rights">All rights reserved with @Programming Pathsala</div>
 </body>
 
 </html>
